# gimli

./: .appveyor.yml  .gitattributes  .gitignore  .grenrc  .jenkins.sh  .jenkins_conda.sh  .landscape.yml  .prospector.yml  .pylintrc  .travis.yml  AUTHORS  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CITATION.md  CITATION.rst  CMakeLists.txt  CONTRIBUTING.md  COPYING.rst  ChangeLog  ChangeLog.rst  Dockerfile  INSTALL  INSTALL.rst  INSTALLATION.md  INSTALLATION.rst  INSTALL_LINUX.rst  INSTALL_MAC.rst  INSTALL_WIN.rst  ISSUE_TEMPLATE.md  LICENSE.md  MANIFEST.in  Makefile.am  NEWS  PULL_REQUEST_TEMPLATE.md  README  README.md  README.rst  TODO  (+11 more)
apps/em1d/: CMakeLists.txt  Makefile.am  cux1-nord.fdem  dc1dinv.cpp  dc1dsmooth.cpp  fdem1dinv.cpp  fdem1dsmooth.cpp  mrs1dblock.cpp  mrs1dsmooth.cpp  mt1dinv.cpp  mt1dsmooth.cpp
apps/fit/: CMakeLists.txt  Makefile.am  fit.cbp  harmfit.cpp  polyfit.cpp
apps/misc/: CMakeLists.txt  Makefile.am  bms2vtk.cpp  invlinearmat.cpp  kronmatrix.cpp
apps/traveltime/: CMakeLists.txt  Makefile.am  ttinv.cpp  ttinvoffset.cpp  ttmod.cpp  ttresolution.cpp
core/src/: CMakeLists.txt  baseentity.h  blockmatrix.cpp  blockmatrix.h  calculateMultiThread.h  cholmodWrapper.cpp  cholmodWrapper.h  curvefitting.cpp  curvefitting.h  datacontainer.cpp  datacontainer.h  dc1dmodelling.cpp  dc1dmodelling.h  elementmapmatrix.cpp  elementmapmatrix.h  elementmatrix.cpp  elementmatrix.h  elementmatrixmap.cpp  elementmatrixmap.h  em1dmodelling.cpp  em1dmodelling.h  exitcodes.h  expressions.h  gimli.cpp  gimli.h  gravimetry.cpp  gravimetry.h  integration.cpp  integration.h  interpolate.cpp  interpolate.h  inversion.cpp  inversion.h  inversionBase.h  kdtreeWrapper.cpp  kdtreeWrapper.h  ldlWrapper.cpp  ldlWrapper.h  linSolver.cpp  linSolver.h  (+61 more)
core/src/bert/: bert.cpp  bert.h  bertDataContainer.cpp  bertDataContainer.h  bertJacobian.cpp  bertJacobian.h  bertMisc.cpp  bertMisc.h  datamap.cpp  datamap.h  electrode.h  (+3 more)
pygimli/: CMakeLists.txt  Makefile.linux  Makefile.msys  __init__.py  _version.py  build.sh  doxygen.py  environment_for_pygimli_build.py  generate_pygimli_code.py  getwheelname.py.in  pygimli.h  pypi.readme.md  setup.py.in
pygimli/buildScripts/: buildBoostWin32.sh  buildToolChain.sh
pygimli/core/: __init__.py  base.py  chwhich.sh  config.py  core.py  datacontainer.py  decorators.py  load.py  logger.py  math.py  matrix.py  mesh.py  setup.py  trans.py
pygimli/frameworks/: __init__.py  harmfit.py  inversion.py  linesearch.py  lsqrinversion.py  methodManager.py  modelling.py  resolution.py  timelapse.py
pygimli/math/: __init__.py  bfgsmatrix.py  matrix.py
pygimli/meshtools/: __init__.py  example.xml  grid.py  mapping.py  mesh.py  polytools.py  quality.py
pygimli/mplviewer/: __init__.py
pygimli/physics/: __init__.py  complexSpectrum.py  constants.py
pygimli/pygimli/: __init__.py
pygimli/solver/: __init__.py  green.py  leastsquares.py  solver.py  solverFiniteVolume.py  utils.py
pygimli/testing/: __init__.py  test_ERTManager_simulate.py  test_FEM.py  test_FOP.py  test_Frameworks.py  test_IO_PLC.py  test_Interpolate.py  test_IterBug.py  test_Logger.py  test_MeshGenerator.py  test_Misc.py  test_OSMGetter.py  test_OwnMatrix.py  test_Perf.py  test_PhysicsManagers.py  test_RValueConverter.py  test_RegionManager.py  test_SparseMatrix.py  test_Traveltime.py  test_XVector.py  test_geometricFactors.py  test_misc.py  test_polytools.py  test_show.py
pygimli/tests/: pygimliInfo.py
pygimli/utils/: __init__.py  base.py  cache.py  complex.py  dem.py  geostatistics.py  gps.py  hankel.py  ipcserver.py  postinversion.py  sparseMat2Numpy.py  streams.py  units.py  utils.py
pygimli/viewer/: __init__.py  showmatrix.py  showmesh.py  vistaview.py
python/: CMakeLists.txt  Makefile.linux  Makefile.msys  README  build.sh  custom_rvalue.cpp  doxygen.py  environment_for_pygimli_build.py  generate_pygimli_code.py  generators.h  hand_made_wrappers.py  mkcache.sh  pygimli.h  setup.py  tests.txt  todo.txt
python/apps/: app_template.py  convertMesh  createParaMesh  createParaMesh.py  createParameterMesh  dataMerge  datamerge  datamerge.py  gimli  mergedata.py  meshMerge  meshconvert.py  meshmerge.py  pyCreateSurface  pycreatesurface.py  pygi  pyshowdata.py  pytripatch  pytripatch.py  recountPara  recountPara.py  render_example  script_template.py  showSens  showSens.py
python/buildScripts/: buildBoostWin32.sh  buildToolChain.sh  mingwupgrade.sh
python/pygimli/: __init__.py  _logger.py  _version.py  chdll.sh  chwhich.sh
python/tests/: Makefile  README.txt  pygimliInfo.py  setup.cfg  testBVectorComp.py  testFOP.py  testIterBug.py  testOSMGetter.py  testOwnMatrix.py  testPerf.py  testRValueConverter.py  testXVector.py  test_BVectorComp.py  test_FOP.py  test_Interpolate.py  test_IterBug.py  test_MeshGenerator.py  test_OSMGetter.py  test_OwnMatrix.py  test_Perf.py  test_RValueConverter.py  test_XVector.py  test_misc.py
rpm/: Makefile.am  license.txt  specfile.in
src/: CMakeLists.txt  Makefile.am  baseentity.h  blockmatrix.h  calculateMultiThread.h  cholmodWrapper.cpp  cholmodWrapper.h  curvefitting.cpp  curvefitting.h  datacontainer.cpp  datacontainer.h  dc1dmodelling.cpp  dc1dmodelling.h  elementmatrix.cpp  elementmatrix.h  em1dmodelling.cpp  em1dmodelling.h  exitcodes.h  expressions.h  gimli.cpp  gimli.h  gravimetry.cpp  gravimetry.h  integration.cpp  integration.h  interpolate.cpp  interpolate.h  inversion.cpp  inversion.h  inversionBase.h  inversionFramework.h  ipcClient.cpp  ipcClient.h  kdtreeWrapper.cpp  kdtreeWrapper.h  ldlWrapper.cpp  ldlWrapper.h  linSolver.cpp  linSolver.h  line.cpp  (+58 more)
src/bert/: bert.cpp  bert.h  bertDataContainer.cpp  bertDataContainer.h  bertJacobian.cpp  bertJacobian.h  bertMisc.cpp  bertMisc.h  datamap.cpp  datamap.h  dcfemmodelling.cpp  dcfemmodelling.h  electrode.cpp  electrode.h
src/kdtree++/: iterator.hpp  kdtree.hpp
tests/unittest/: CMakeLists.txt  GIMLiUnitTest.cbp  Makefile.am  testDataContainer.h  testExternals.h  testFEM.h  testGIMLiMisc.h  testGeometry.h  testMesh.h  testShape.h  testVector.h  unitTest.cpp  unittest.sh
(+1030 files in other folders)
